assert-struct/tests/snapshots/basic__tuple_field_mismatch.snap
---
source: assert-struct/tests/basic.rs
expression: message
---
error: assert_struct! failed
  --> assert-struct/tests/basic_errors/tuple_field_mismatch.rs:22:20
   |
22 |             data: (60, "test"), // Wrong first element
   |                    ^^ got 50
